<resources>
    <string name="app_name">J_Max</string>
    <string name="Loading">Loading...</string>
    <string name="title_activity_home">home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_our_location">Map</string>

    <string name="label">J_MAX</string>
    <string name="email">denny.munga@outlook.com</string>

    <string name="label2">Welcome to J_Max.</string>

    <string name="info">For the latests in:</string>

    <string name="txtMovie">
            Movies:
        All the latest and highest rated movies according to IMDb. For every four movies bought one movie is given for free.
        Every movie sold has a return policy which states that a movie can only be accepted if it was sold less than 48 hours and if
        the disc is in good condition.



    </string>


    <string name="txtSeries">
           Series:
        All the latest and highest rated series according to IMDb. For every four series bought one series is given for free.
        Every series sold has a return policy which states that a movie can only be accepted if it was sold less than 48 hours and if
        the disc is in good condition.

    </string>

    <string name="title_activity_about">about</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_contacts">contacts</string>
    <string name="title_activity_movies">movies</string>
    <string name="title_activity_series">series</string>

    <string name="txtHeading">name</string>
    <string name="subHeading">position</string>

    <string name="txtLabel">PLACE MOVIE ORDER</string>
    <string name="txtEmail">Enter your email address</string>
    <string name="txtSearch">Enter movie title</string>
    <string name="btnFind">Find</string>
    <string name="btnPlace">Add to cart</string>
    <string name="btnNew">New Movie</string>
    <string name="btnCheck">Check Out</string>


    <string name="txtLabelS">PLACE SERIES ORDEER</string>
    <string name="txtEmailS">Enter your email address</string>
    <string name="txtSearchS">Enter Series Title</string>
    <string name="btnFindS">Find</string>
    <string name="btnPlaceS">Add to Cart</string>
    <string name="btnNewS">New Movie</string>
    <string name="btnCheckS">Check Out</string>
    <string name="title_activity_settings">Settings</string>



</resources>
