<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:background="#000"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mufasa.j_max.movies"
    tools:showIn="@layout/activity_movies">

    <TextView
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorAccent"

        android:id="@+id/txtLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/txtLabel"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/txtSearch"

        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLabel"
        android:layout_marginTop="42dp"

        android:ems="10"
        android:hint="@string/txtSearch"
        android:inputType="textPersonName"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnFind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnFind"

        android:layout_marginRight="17dp"
        android:layout_marginEnd="17dp"
        android:layout_alignBottom="@+id/txtSearch"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:textColor="#fff"

        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""

        android:layout_below="@+id/txtSearch"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="18dp" />

    <Button
        android:id="@+id/btnPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPlace"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_below="@+id/txtResult"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnCheckOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCheck"
        android:layout_alignBaseline="@+id/btnPlace"
        android:layout_alignBottom="@+id/btnPlace"
        android:layout_alignRight="@+id/btnFind"
        android:layout_alignEnd="@+id/btnFind" />

    <TextView
        android:id="@+id/txtCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:text="TextView"
        android:layout_below="@+id/btnPlace"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
