<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#000"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mufasa.j_max.home"
    tools:showIn="@layout/app_bar_home">

    <TextView

        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorAccent"

        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label2"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_marginTop="13dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/intro"
        android:layout_marginTop="13dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:id="@+id/linearLayout">

        <TextView
            android:textColor="#fff"
            android:id="@+id/txtMovies"

            android:layout_width="179dp"
            android:layout_height="188dp"
            android:layout_gravity="center"
            android:text="@string/txtMovie" />

        <TextView
            android:id="@+id/txtSeries"

            android:layout_width="match_parent"
            android:layout_height="189dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/txtSeries"

            android:textColor="#fff" />
    </LinearLayout>

    <TextView
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="#fff"

        android:id="@+id/intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/info"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <LinearLayout



        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:orientation="horizontal">

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
</RelativeLayout>
